Revision history for firebird_fdw

0.6.0	2018-10-??
	- Support Firebird BOOLEAN datatype (Firebird 3.0 and later)
	- Improve "IMPORT FOREIGN SCHEMA" implementation
	- Adapt code to compile against current PostgreSQL HEAD

0.5.0	2018-10-12
	- Support triggers on foreign tables (PostgreSQL 9.4 and later)
	- Support Firebird BLOB datatype (TEXT subtype only)

0.4.0   2018-10-02
	- Add function firebird_fdw_version()
	- Add TAP tests
	- Fix bug in INSERT ... RETURNING ...
	- Miscellaneous minor bug fixes and code cleanup

0.3.0   2018-04-22
	- Support PostgreSQL 9.6 and 10
	- Add support for IMPORT FOREIGN SCHEMA (PostgreSQL 9.5 and later)
	- Ensure tables defined with the 'query' option actually work
	- Automatically reconnect if Firebird goes away
	- Update function calls for changes in libfq 0.2.0
	- Improve SIGINT handling
	- Improve error message handling
	- Fix memory error when generating connection string
	- Fix crash when multibyte string overflows (GitHub #5)
	- Report transaction errors as actual errors; log harmless
	  unhandled transaction types as DEBUG rather than as WARNING
	- General code cleanup

0.2.5   2014-02-11
        - Add RPM spec files for openSUSE and Red Hat

0.2.4   2014-02-06
        - libfq now supports a "client_encoding" connection parameter,
          which enables us to cover most reasonably common encoding
          combinations by passing the value provided by
          GetDatabaseEncodingName() to Firebird. See caveat in code
          regarding compatibility between PostgreSQL and Firebird encoding
          names.

0.2.3   2014-02-02
        - Default to PostgreSQL table name if no 'table_name' option
          explicitly provided

0.2.2   2014-01-25
        - Implement basic transaction support

0.2.1   2014-01-23
        - Make extension compatible with PostgreSQL 9.2
        - Fix some regressions

0.2.0   2014-01-23
        - Implement basic connection caching
        - Fix implicit cast handling

0.1.6   2014-01-21